# Committed but Unreleased Changes

DataMapping & SqlPojoCollectionMapping

DataMapping
- Added getMappingName() method
- Added setMappingName() method

SqlPojoCollectionMapping
- Fixed bug in Name generation

# Expected Release: v1.14.0