@@ -7,6 +7,7 @@ DataMapping
 - Added setMappingName() method
 
 SqlPojoCollectionMapping
+- Added convertSourceValuesToString() & convertDestinationValuesToString()
 - Fixed bug in Name generation
 
 # Expected Release: v1.14.0
